Acholi: update download.lang to 100% and main.lang to 97%
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104105 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/main.lang
+++ b/ach/main.lang
@@ -1,393 +1,393 @@
 ;Navigation
-Navigation
+Wot iwiye
 
 
 ;Press area
-Press Area
+Dii eria
 
 
 ;About
-About
+Lok ikome
 
 
 ;Store
-Store
+Gwok
 
 
 ;Donate
-Donate
+Jal
 
 
 ;Support
-Support
+Cwak
 
 
 ;Products
-Products
+Jami ma kati
 
 
 ;Add-ons
-Add-ons
+Med ikome
 
 
 ;About Us
-About Us
+Loko Ikom wa
 
 
 ;Developers
-Developers
+Jo ma yubo
 
 
 ;Labs
-Labs
+Lab
 
 
 ;skip to Navigation
-skip to Navigation
+Kal woko wek Wot iwiye
 
 
 ;switch language
-switch language
+Kob leb
 
 
 ;Back to home page
-Back to home page
+Dok cen I pot buk me acaki
 
 
 ;About Mozilla
-About Mozilla
+Lok kom Mozilla
 
 
 ;Get Involved
-Get Involved
+Bed Ngat acel ie
 
 
 ;Licensing
-Licensing
+Keto lanycec
 
 
 ;Careers
-Careers
+Lacuk cuny
 
 
 ;Press Center
-Press Centre
+Dii Dyere
 
 
 ;Contact Us
-Contact Us
+Kube kwed Wa
 
 
 ;Site contact
-Site contact
+Dyer bar me kube
 
 
 ;Other languages:
-Other languages:
+Leb mapatpat:
 
 
 ;%Y-%m-%d
-%Y-%m-%d
+%Y-%m-%d {ok}
 
 
 ;All rights reserved.
-All rights reserved.
+Kigwoko ne maber.
 
 
 ;Legal Notices
-Legal Notices
+Ngec pa Lwak
 
 
 ;Privacy Policy
-Privacy Policy
+Cik pa Dano
 
 
 ;Visit Mozilla.com
-Visit Mozilla.com
+Lim Mozilla.com
 
 
 ;Visit Mozilla.com (in English)
-Visit Mozilla.com (US site)
+Lim Mozilla.com (Dyer bar pa US)
 
 
 ;Download Firefox - Free
-Download Firefox - Free
+Kwany woko Firefox-Me nono
 
 
 ;Release Notes
-Release Notes
+Gony Nyig lok
 
 
 ;Other Systems and Languages
-Other Systems and Languages
+Kit Mapat ki Leb
 
 
 ;Get Firefox
-Get Firefox
+Gam Firefox
 
 
 ;Free Download
-Free Download
+Kwanyo me Nono
 
 
 ;Help us make Firefox even better!
-Help us make Firefox even better!
+Kony wa wek omi Firefox obed maber!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Take a few moments to take a quick survey and share your thoughts with us.
+Ter kare manok wek i be ie pe oyoto ki nywak tam megi kwed wa.
 
 
 ;Close
-Close
+Lor
 
 
 ;(in English)
-(in English)
+(I leb Munu)
 
 
 ;Download Now - Free
-Download Now - Free
+Kwany Kombedi-Me nono
 
 
 ;Return to top
-Return to top
+Doc cen i wiye malo
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
+Myero i <a href="http://get.adobe.com/flashplayer/"> Ngec pa Latuku me Adober</a>kombedi.
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
+Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.  Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
 
 
 ;Features
-Features
+Kit
 
 
 ;Customize
-Customize
+Ket megi
 
 
 ;Synchronize
-Synchronize
+Keto gin marwate kacel
 
 
 ;Develop for Mobile
-Develop for Mobile
+Yub ne pi Cing
 
 
 ;Other Supported Platforms
-Other Supported Platforms
+Jami ma iyie Mukene ma Kicwako te
 
 
 ;Other Platforms &amp; Languages
-Other Platforms &amp; Languages
+Jami ma iyie mapat &amp;Leb
 
 
 ;Choose your location
-Choose your location
+Yer kabedo megi
 
 
 ;Download Firefox directly from your phone
-Download Firefox directly from your phone
+Kwany Firefox atir ni aa ki cim megi
 
 
 ;Download
-Download
+Kwany
 
 
 ;Next
-Next
+Mede anyim
 
 
 ;MB
-MB
+MB {ok}
 
 
 ;MegaBytes
-MegaBytes
+MegaBayit
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
-Videos
+Video
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
+Nikwanyo ka kwene onyo <a href="%s">noted</a>, jami ma ikom dyer bar man kityeko culo lanycec ne<br /><a href="%s">Yele me Tiyo ki Nywako-Lanycec v3.0</a> onyo cik mo ma okati.
 
 
 ;Report Trademark Abuse
-Report Trademark Abuse
+Mi ngec me Alama me Nywaro cat
 
 
 ;Free Upgrade
-Free Upgrade
+Yilo me nono
 
 
 ;Follow us on:
-Follow us on:
+Lub kor wa ikom:
 
 
 ;Customize with Add-ons
-Customize with Add-ons
+Ket megi ci Med ikome
 
 
 ;Sync Your Desktop & Mobile
-Sync Your Desktop & Mobile
+Sync Wang Kompiuta &Me cing
 
 
 ;Learn More
-Learn More
+Nong ngec Madwong
 
 
 ;Watch the video
-Watch the video
+Nen cideo
 
 
 ;WebM format
-WebM format
+Kit WebM
 
 
 ;Ogg Theora format
-Ogg Theora format
+Ogg Kit Theora
 
 
 ;MPEG-4 format
-MPEG-4 format
+Kit pa MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Mok me keto email address matiyo.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Time ber i kwan Cik pa dano pi Mozilla ki i yee kun i roto canduk.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Please enter your email address and review the Mozilla Privacy Policy.
+Tim ber i ket email address megi ki i nen odoco Cik pa Dano me Mozilla.
 
 
 ;Mobile
-Mobile
+Me cing
 
 
 ;Firefox Updated
-Firefox Updated
+Ki mino ngec me Firefox
 
 
 ;Take a Look at Tomorrow's Web
-Take a Look at Tomorrow's Web
+Nen Web me diki manok
 
 
 ;Journey to the Future with Firefox
-Journey to the Future with Firefox
+Weno i I anyim kwede Firefox
 
 
 ;Join the Beta Program
-Join the Beta Programme
+Dony i Purugram Mamwonya
 
 
 ;Experience Firefox
-Experience Firefox
+Nong ngec me Firefox
 
 
 ;The future of the Web is waiting for you!
-The future of the Web is waiting for you!
+Anyim pa Web bene tye ka kuri!
 
 
 ;The future of the Web starts now.
-The future of the Web starts now.
+Anyim pa Web bicake kombedi.
 
 
 ;Try Firefox with a fresh look and feel.
-Try Firefox with a fresh look and feel.
+Tem Firefox kwede neno manyen ki i winy.
 
 
 ;Experience tomorrow's Web today.
-Experience tomorrow's Web today.
+Nong Web me diki tin.
 
 
 ;Check out the new look and feel of Firefox.
-Check out the new look and feel of Firefox.
+Rot odoco neno manyen ki i winye pa Firefox.
 
 
 ;Browse the future of the Web.
-Browse the future of the Web.
+Yeny anyim me Web.
 
 
 ;See Firefox with a new look and feel.
-See Firefox with a new look and feel.
+Nen Firefox kwede lanen manyen ki i winy.
 
 
 ;Download Beta Now.
-Download Beta Now.
+Kwany Mamwonya kombedi.
 
 
 ;All Systems & Languages
-All Systems & Languages
+Kit Lung & Leb
 
 
 ;View Full Site
-View Full Site
+Nen odoco Dyer Bar Lung
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Nong Firefox pi Anroid
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Kwany<span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Tye me nono ni aa i cuk me Anroid
 
 
 ;Desktop
-Desktop
+Cal ma i wang kompiuta
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Mamwonya ma kiwoto kwede awota
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefoxme ma kiwoto kwede awota
 
 
 ;Email
-Email
+Email {ok}
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+Mozilla Firefox. Kelo Web ma odongo bot XP.
 
 
 ;Super speed
-Super speed
+Dwiro kikome
 
 
 ;Stunning graphics
-Stunning graphics
+Miyo cal time
 
 
 ;The latest technologies
-The latest technologies
+Diro ma okato macok coki
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+I tye katic ki cik me Firefox ma oti woko. Nong ngec megi wek obed maber!! <br/> <a href="%s">Kwany gin yilo me nono</a> i kare mo ma pe romo acel pi kit ma okato cokcoki, dwiro ki ber bedo ne.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+Rwom me yilo mite boti! Bed maber i kin kare mape oo acel. <br/> Cak tic ki Firefox megi manyen pi yenyo gin mamwonya ki megi ikom Web. <br/>   dwir ci tye me nono!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
@@ -400,5 +400,3 @@ Upgrade now
 
 ;Update now
 Update now
-
-
