Scots Gaelic: update number of .lang files to 100% translated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104106 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/newsletter.lang
+++ b/gd/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Faigh na naidheachdan gach mìos
 
@@ -62,7 +59,7 @@ Na naidheachdan uile sa <span>chuairt-litir</span> againn
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Chaidh am fo-sgrìobhadh agad dhan chuairt-litir a dhearbhadh.
 
 
 ;Format
@@ -70,110 +67,108 @@ Fòrmat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Sin thu deiseil! <span>Ach fuirich ort, tha barrachd ann</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Bheil thu 'g iarraidh am fiosrachadh as iomchaidh? Innis dhuinn beagan mu do dheidhinn. Agus fhad 's a tha thu a-seo, carson nach clàraich thu airson naidheachdan Mozilla eile?
 
 
 ;Firefox & You
-Firefox & You
+Firefox ┐ thusa
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Na cuairt-litrichean eile againn:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Faigh na gliocasan is gleusan as ùire ach an cuir thu am brabhsair as fhearr leat gu làn fheum.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firfox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Fiosrachadh mu na tuilleadain is feartan as ùire 's as snasail airson Mobile, no Firefox Beag mar a chanas sinne.
 
 
 ;Beta News
-Beta News
+Naidheachdan Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Leugh mu na feartan as ùire airson Firefox Mòr agus Beag mus dig an tionndadh deireannach a-mach.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Bitheamaid nar caraidean!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Tha Firefox air na lìonraidhean sòisealta as fhearr leat. Dèan ceangal rinn agus gabh pàirt sa chòmhradh.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Rianaich <span>fo-sgrìobhaidhean nan cuairt-litrichean</span> agad
 
 
 ;Subscribe
-Subscribe
+Fo-sgrìobh
 
 
 ;Unsubscribe
-Unsubscribe
+Sguir dhen fho-sgrìobhadh
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Cuir cromag an-seo mur eil thu airson post-d sam bith fhaighinn o Mozilla tuilleadh
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Chan eil mi ag iarraidh post-d sam bith o Mozilla tuilleadh
 
 
 ;Save Preferences
-Save Preferences
+Sàbhail na roghainnean
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Tapadh leat airson roghainnean a' phuist-d agad ùrachadh.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Chaidh crìoch a chur air an fho-sgrìobhadh agad.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Tha sinn duilich gu bheil thu 'gar fàgail. Saoil an innis thu dhuinn carson?
 
 
 ;You send too many emails.
-You send too many emails.
+Tha mi a' faighinn cus phost-d uaibh.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Cha robh dad a shusbaint iomchaidh ann dhomhsa.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Bha e duilich an leughadh leis an dealbhadh a bh' orra.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Cha do rinn mise clàradh air a shon.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Tha mi a' leantainn Mozilla air Facebook is Twitter 'na àite.
 
 
 ;Submit
-Submit
+Cuir a-null
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
-
+Mòran taing son innse dhuinn carson a tha thu a' fàgail.
