--- a/gd/firefoxtesting.lang
+++ b/gd/firefoxtesting.lang
@@ -1,6 +1,3 @@
-﻿# These strings are used on http://www-dev.allizom.org/firefox/beta/ http://www-dev.allizom.org/mobile/beta/ and will also be used in future Aurora download pages
-
-
 ;Download Firefox Beta for Android - Free
 Luchdaich a-nuas Firefox Beta airson Android - Saor an-asgaidh
 
@@ -14,7 +11,7 @@ Luchdaich a-nuas is cuir Firefox fo dheucheainn a tha ri sgaoileadh san àm ri t
 
 
 ;Firefox Beta
-Firefox Beta {ok} 
+Firefox Beta 
 
 
 ;Firefox Beta for:
@@ -55,5 +52,3 @@ Tha cothrom agad cur ris an ath-thionndadh de Firefox agus na 450 millean duine 
 
 ;Supported devices
 Innealan ris a bheil taic
-
-
