--- a/gd/mobile.lang
+++ b/gd/mobile.lang
@@ -1,131 +1,126 @@
-# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
-
-
 ;Get Firefox for Android
-Get Firefox for Android
+Faigh Firefox airson Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Luchdaich a-nuas airson <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Saor o mhargaid Android
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+No tadhail air <a %s>Firefox.com/m</a> air an fhòn agad.
 
 
 ;Supported Devices
-Supported Devices
+Innealan ris a bheil taic
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Faigh o iTunes e - SAOR AN-ASGAIDH
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home airson <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Faigh cothrom air an eachdraidh, na comharran-lìn 's na tabaichean fosgailte air an iPhone agad.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Luchdaich a-nuas Firefox <span>dhan fhòn-làimhe agad</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+A bheil thu airson na feartan as ùire a chur fo dheuchainn?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Faigh Firefox Home airson iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Luchdaich a-nuas am beta airson Android
 
 
 ;Download
-Download
+Luchdaich a-nuas
 
 
 ;for
-for
+airson
 
 
 ;Free from iTunes
-Free from iTunes
+Saor o iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Gheibh thu na feartan as ùire agus ma bheir thu dhuinn do bheachdan, bidh buaidh agad air na bhios san tionndadh deireannach.
 
 
 ;Developer Tools
-Developer Tools
+Innealan an luchd-leasachaidh
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+'S urrainn dhut tionndadh Firefox nam fònaichean-làimhe a stàladh air a' choimpiutair mhòr agad gus a chur fo dheuchainn, do bheachdan air a thoirt dhuinn agus tuilleadain a thogail.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Dèan ceangal le Firefox airson fònaichean-làimhe:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Ar cuairt-litir mhìosail
 
 
 ;Follow us
-Follow us
+Lean rinn
 
 
 ;Become a fan
-Become a fan
+Lean rinn
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Tha Firefox loma làn de thionnsgalachdan a leigeas leat barrachd brabhsadh a dhèanamh air nas lugha de thaidhpeadh agus bheir e dhut an lìon glan, sgiobalta is luath.
 
 
 ;Freedom from typing
-Freedom from typing
+Saoirse on taidhpeadh
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Ionnsaichidh an sàr-sgrìn dè na làraichean as fhearr leat agus leis a sin, bidh cothrom agan an ruigsinn air nas lugha de thaidhpeadh no fiù gun taidhpeadh sam bith.
 
 
 ;Best of both worlds
-Best of both worlds
+Cuid as fhearr dhen dà shaoghal
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Chaidh Firefox airson Android ath-dhealbhadh agus chaidh piseach a chur air a chum cleachdadh air fònaichean is tablaidean.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Brabhsadh luath furasta
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Leis gu bheil sioncronachadh, brabhsadh tabaichte is comharran-lìn le aon bheantainn ann, bidh a h-uile rud faisg ort.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Cobhair a dhìth ort?</a> Tadhail air an làrach taice airson Firefox air Android againn.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Luchdaich a-nuas am build a tha ceart dhutsa agus cuir fo dheuchainn e.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
-
-
+Seall a h-uile seanail againn airson Firefox son innealan-làimhe »
