--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -1,6 +1,3 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Thoir leat Firefox àite sam bith dhan dèid thu! Tha an tionndadh as ùire de Firefox airson Android deas ri do làimh a-nis. <a href="%s">Faigh e an-dràsta.</a>
 
@@ -118,6 +115,4 @@ Thoir cuireadh dha do charaidean ach am faic iad na bhios san ath Firefox. <a hr
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-A' cleachdadh Firefox air grunn choimpiutairean? 'S urrainn dhut na tuilleadain agad a shioncronachadh air gach aon dhiubh <a href="%">Faigh a-mach mar a chuireas tu gu dol an sioncronachadh.</a>
-
-
+A' cleachdadh Firefox air iomadh coimpiutair? 'S urrainn dhut na tuilleadain agad a shioncronachadh air am feadh uile. <a href="%">Faigh a-mach mar a chuireas tu an sioncronachadh an comas.</a>
