l10n: upgrade a link in all upgradedialog files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104160 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ab-CD/upgradedialog.lang
+++ b/ab-CD/upgradedialog.lang
@@ -29,8 +29,8 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
 
 
 ;get the latest in security
