--- a/ast/upgradedialog.lang
+++ b/ast/upgradedialog.lang
@@ -26,8 +26,9 @@ Más impresionante que nunca
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
+
 
 
 ;get the latest in security
