--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -26,7 +26,7 @@ Més fantàstic que mai
 Hi ha una nova versió del Firefox que us protegirà millor contra els atacs en línia.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Baixeu l'actualització</a>. És ràpid i gratuït!
 
 
