--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -26,8 +26,8 @@ Skvělejší než kdy předtím
 Je k dispozici nová verze Firefoxu, která vás může lépe ochránit před online útoky.
 
 
-;Get the upgrade — it’s fast & free!
-Získejte aktualizaci. Je rychlá a zdarma!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Získejte aktualizaci</a>. Je rychlá a zdarma!
 
 
 ;get the latest in security
