--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -26,8 +26,8 @@
 Υπάρχει διαθέσιμη νέα έκδοση του Firefox που σας προστατεύει πιο αποτελεσματικά από επιθέσεις.
 
 
-;Get the upgrade — it’s fast & free!
-Κάντε αναβάθμιση - Είναι δωρεάν και γρήγορη!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Κάντε αναβάθμιση</a> - Είναι δωρεάν και γρήγορη!
 
 
 ;get the latest in security
