--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -26,8 +26,8 @@ Pli da ravaĵoj ol iam ajn
 Ekzistas nova versio de Firefox kiu povas pli bone protekti vin kontraŭ retaj atakoj.
 
 
-;Get the upgrade — it’s fast & free!
-Ricevu la ĝisdatigon — estas rapide kaj senpage!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Ricevu la ĝisdatigon</a> — estas rapide kaj senpage!
 
 
 ;get the latest in security
