--- a/es-AR/upgradedialog.lang
+++ b/es-AR/upgradedialog.lang
@@ -26,8 +26,8 @@ Más funcionalidades que nunca
 Hay una actualización de Firefox que puede protegerte mejor de los ataques online.
 
 
-;Get the upgrade — it’s fast & free!
-Descargá la actualización, ¡es rápido y gratuito!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Descargá la actualización</a>, ¡es rápido y gratuito!
 
 
 ;get the latest in security
