--- a/gl/upgradedialog.lang
+++ b/gl/upgradedialog.lang
@@ -26,7 +26,7 @@ Máis incríbel que nunca
 Hai unha nova versión do Firefox que permitirá unha mellor protección contra os ataques en liña.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 Actualícese — Axiña e de balde!
 
 
