--- a/ko/upgradedialog.lang
+++ b/ko/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox 3.6 보다 더 빠른 속도
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>바로 업그레이드</a> - 무료 및 신기능 제공!
 
 
