--- a/lv/upgradedialog.lang
+++ b/lv/upgradedialog.lang
@@ -26,7 +26,7 @@ Vairāk superīguma kā jebkad
 Ir pieejama jauna Firefox versija, kas daudz labāk aizsargā no uzbrukumiem Intertnetā.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Iegūstiet jauninājumu</a> - tas būs ātri un par brīvu!
 
 
