--- a/nl/upgradedialog.lang
+++ b/nl/upgradedialog.lang
@@ -26,8 +26,8 @@ Geweldiger dan ooit
 Er is een nieuwe versie van Firefox die u beter tegen online-aanvallen kan beschermen.
 
 
-;Get the upgrade — it’s fast & free!
-Download de nieuwe versie – snel en gratis!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Download de nieuwe versie</a> – snel en gratis!
 
 
 ;get the latest in security
