--- a/pt-BR/upgradedialog.lang
+++ b/pt-BR/upgradedialog.lang
@@ -19,8 +19,8 @@ Mais incrível do que nunca
 ;There’s a new version of Firefox that can better protect you against online attacks.
 Há uma versão mais recente do Firefox que pode melhor protegê-lo de ataques on-line.
 
-;Get the upgrade — it’s fast & free!
-Obtenha a atualização — é rápido e grátis!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Obtenha a atualização</a> — é rápido e grátis!
 
 ;get the latest in security
 tenha o mais recente em segurança
