--- a/ru/upgradedialog.lang
+++ b/ru/upgradedialog.lang
@@ -26,8 +26,8 @@
 Вышла новая версия Firefox, которая сможет лучше защитить вас от атак из Интернета.
 
 
-;Get the upgrade — it’s fast & free!
-Загрузите обновление — это быстро и бесплатно!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Загрузите обновление</a> — это быстро и бесплатно!
 
 
 ;get the latest in security
