--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -26,7 +26,7 @@ Më i mahnitshëm se kurrë
 Ka një version të ri të Firefox-it që mund t'ju mbrojë më mirë kundër sulmeve online.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Merrni përmirësimin</a> - është falas dhe shkarkohet shpejt!
 
 
