--- a/sv-SE/upgradedialog.lang
+++ b/sv-SE/upgradedialog.lang
@@ -26,8 +26,8 @@ Nu ännu smartare
 Det finns en ny version av Firefox som ger dig bättre skydd mot nätangrepp.
 
 
-;Get the upgrade — it’s fast & free!
-Hämta uppdateringen — det går snabbt och är gratis!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Hämta uppdateringen</a> — det går snabbt och är gratis!
 
 
 ;get the latest in security
