--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -26,8 +26,8 @@
 有新版本的 Firefox 推出了，可以更好的幫助您抵禦網路上的攻擊。
 
 
-;Get the upgrade — it’s fast & free!
-立刻升級 - 很快，而且不用錢！
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>立刻升級</a> - 很快，而且不用錢！
 
 
 ;get the latest in security
