--- a/af/upgradedialog.lang
+++ b/af/upgradedialog.lang
@@ -26,7 +26,7 @@ Beter as ooit
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Kry die bywerking</a> - dit is vinnig en gratis!
 
 
