--- a/as/upgradedialog.lang
+++ b/as/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox 3.6 -কে বহু গুণে দ্ৰুত
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>উন্নত সংস্কৰণ পাওক</a> - ই দ্ৰুত আৰু বিনামূলীয়া!
 
 
