--- a/be/upgradedialog.lang
+++ b/be/upgradedialog.lang
@@ -26,7 +26,7 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Атрымайце абнаўленне</a> - хутка і задарма!
 
 
