--- a/bn-IN/upgradedialog.lang
+++ b/bn-IN/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox ৩.৬-র তুলনায় অনেক দ্রুত
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>আপগ্রেড প্রাপ্ত করুন</a> - বিনামূল্যে ও দ্রুত!
 
 
