--- a/cy/upgradedialog.lang
+++ b/cy/upgradedialog.lang
@@ -26,7 +26,7 @@ Mwy anhygoel nag erioed
 Mae yna fersiwm newydd o Firefox sy'n gallu eich amddiffyn yn well rhag ymosodiadau ar-lein.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Estyn y fersiwn newydd</a> - mae'n gyflym ac am ddim!
 
 
