--- a/de/upgradedialog.lang
+++ b/de/upgradedialog.lang
@@ -26,8 +26,8 @@ Wunderbarer als je zuvor
 Es gibt eine neue Firefox-Version, die Sie besser vor Angriffen im Internet schützen kann.
 
 
-;Get the upgrade — it’s fast & free!
-Holen Sie sich das Upgrade — es geht schnell und ist kostenlos!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Holen Sie sich das Upgrade</a> — es geht schnell und ist kostenlos!
 
 
 ;get the latest in security
