--- a/es-ES/upgradedialog.lang
+++ b/es-ES/upgradedialog.lang
@@ -26,8 +26,8 @@ Más cosas alucinantes que nunca
 Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataques informáticos.
 
 
-;Get the upgrade — it’s fast & free!
-Actualiza tu Firefox. ¡Es rápido y gratuito!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Actualiza tu Firefox</a>. ¡Es rápido y gratuito!
 
 
 ;get the latest in security
