--- a/es-MX/upgradedialog.lang
+++ b/es-MX/upgradedialog.lang
@@ -26,7 +26,7 @@ Más cosas alucinantes que nunca
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Consigue la actualización</a> - ¡rápida y gratuitamente!
 
 
