--- a/et/upgradedialog.lang
+++ b/et/upgradedialog.lang
@@ -26,7 +26,7 @@ Palju kiirem kui Firefox 3.6
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Laadi alla uuendus</a> - see on kiire ja tasuta!
 
 
