--- a/eu/upgradedialog.lang
+++ b/eu/upgradedialog.lang
@@ -26,7 +26,7 @@ Inoiz baino txundigarriagoa
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Eguneratu</a> - bizkor eta dohainik!
 
 
