--- a/fi/upgradedialog.lang
+++ b/fi/upgradedialog.lang
@@ -26,7 +26,7 @@ Entistäkin mahtavampi
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Lataa päivitys</a> - se on helppoa ja maksutonta!
 
 
