--- a/fr/upgradedialog.lang
+++ b/fr/upgradedialog.lang
@@ -26,8 +26,8 @@ Encore plus fantastique
 Une nouvelle version de Firefox qui vous protègera mieux contre les attaques en ligne.
 
 
-;Get the upgrade — it’s fast & free!
-Adoptez la dernière mise à niveau — c'est rapide et gratuit&nbsp;!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Adoptez la dernière mise à niveau</a> — c'est rapide et gratuit&nbsp;!
 
 
 ;get the latest in security
