--- a/fy-NL/upgradedialog.lang
+++ b/fy-NL/upgradedialog.lang
@@ -26,7 +26,7 @@ Mear bjusterbaarliks as ea
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Krij de fernijing</a> - it is fluch en fergees!
 
 
