--- a/ga-IE/upgradedialog.lang
+++ b/ga-IE/upgradedialog.lang
@@ -26,7 +26,7 @@ Níos fearr ná aon leagan riamh
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Faigh an leagan nua</a> - tá sé tapa agus saor in aisce!
 
 
