--- a/gu-IN/upgradedialog.lang
+++ b/gu-IN/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox 3.6 કરતાં ઘણું ઝડપી
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>સુધારાઓ મેળવો</a> - તે ઝડપી અને મુક્ત છે!
 
 
