--- a/hi-IN/upgradedialog.lang
+++ b/hi-IN/upgradedialog.lang
@@ -26,7 +26,7 @@
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>उन्नत संस्करण पाएँ</a> - यह अधिक तेज और निःशुल्क है!
 
 
