--- a/hr/upgradedialog.lang
+++ b/hr/upgradedialog.lang
@@ -26,7 +26,7 @@ Bolji nego ikada
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Preuzmite nadogradnju</a> - brzo je i besplatno!
 
 
