--- a/hu/upgradedialog.lang
+++ b/hu/upgradedialog.lang
@@ -26,8 +26,8 @@ Sokkal jobb, mint valaha
 Egy újabb Firefox verzió érhető el, amely jobb védelmet nyújt az online támadások ellen.
 
 
-;Get the upgrade — it’s fast & free!
-Töltse le a frissítést — Gyors és ingyenes!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Töltse le a frissítést</a> — Gyors és ingyenes!
 
 
 ;get the latest in security
