--- a/id/upgradedialog.lang
+++ b/id/upgradedialog.lang
@@ -26,7 +26,7 @@ Lebih keren!
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Dapatkan versi barunya</a> - cepat dan gratis!
 
 
