--- a/is/upgradedialog.lang
+++ b/is/upgradedialog.lang
@@ -26,7 +26,7 @@ Betri en nokkru sinni fyrr
 Búið er að gefa út nýja útgáfu af Firefox sem er betri í að verja þig fyrir netárásum.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Náðu í uppfærslu</a> - hraðvirkara og ókeypis!
 
 
