--- a/it/upgradedialog.lang
+++ b/it/upgradedialog.lang
@@ -26,7 +26,7 @@ Sempre più straordinario
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Aggiorna adesso</a> - è veloce e gratuito
 
 
