--- a/kk/upgradedialog.lang
+++ b/kk/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox 3.6 нұсқасынан әлдеқайда жылдам
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Жаңартуды алыңыз</a> - ол жылдам әрі тегін!
 
 
