--- a/kn/upgradedialog.lang
+++ b/kn/upgradedialog.lang
@@ -26,7 +26,7 @@
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>ನವೀಕರಣಗೊಳಿಸಿ</a> - ವೇಗವಾಗಿ ಆಗುತ್ತದೆ ಹಾಗು ಉಚಿತವಾಗಿದೆ!
 
 
