--- a/ku/upgradedialog.lang
+++ b/ku/upgradedialog.lang
@@ -26,7 +26,7 @@ Ji yên hemû deman hêjatir e
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Bilind bike</a> - lezgîn û belaş e!
 
 
