--- a/lt/upgradedialog.lang
+++ b/lt/upgradedialog.lang
@@ -26,7 +26,7 @@ Dar nuostabesnė nei iki šiol
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Parsisiųskite naujinimą</a> – tai neužtruks ir nieko nekainuos!
 
 
