--- a/ms/upgradedialog.lang
+++ b/ms/upgradedialog.lang
@@ -29,8 +29,8 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
 
 
 ;get the latest in security
