--- a/pt-PT/upgradedialog.lang
+++ b/pt-PT/upgradedialog.lang
@@ -26,7 +26,7 @@ Mais fantástico que nunca
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Obter a actualização</a> - é rápido e gratuito!
 
 
