--- a/rm/upgradedialog.lang
+++ b/rm/upgradedialog.lang
@@ -26,7 +26,7 @@ Anc pli schenial
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Telechargiar l'actualisaziun</a> - spert e gratuit!
 
 
