--- a/sk/upgradedialog.lang
+++ b/sk/upgradedialog.lang
@@ -26,7 +26,7 @@ Lepší než kedykoľvek predtým
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Aktualizujte</a> - rýchlo a zadarmo!
 
 
