--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -26,7 +26,7 @@ Veliko hitrejši kot Firefox 3.6
 Na razpolago je nova različica Firefoxa, ki vas še bolje brani pred napadi na spletu.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 Prenesite posodobitev - hitro in brezplačno!
 
 
