--- a/ta-LK/upgradedialog.lang
+++ b/ta-LK/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox 3.6 விட மிக வேகமானது
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>புதிய பதிப்பினைப் பெறுக!</a> - இது வேகமானது-இலவசமானது!
 
 
