--- a/ta/upgradedialog.lang
+++ b/ta/upgradedialog.lang
@@ -26,7 +26,7 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>மேம்படுத்தலை பெறவும்</a> - இது விரைவானது மற்றும் இலவசமானது!
 
 
