--- a/te/upgradedialog.lang
+++ b/te/upgradedialog.lang
@@ -26,7 +26,7 @@
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>నవీకరణని తెచ్చుకోండి</a> - తర్వరగా అయిపోతుంది మరియు ఉచితం !
 
 
