--- a/th/upgradedialog.lang
+++ b/th/upgradedialog.lang
@@ -26,7 +26,7 @@ Firefox รุ่นล่าสุดอยู่ที่นี่แล้ว
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>ปรับรุ่น</a> - เร็วและฟรี!
 
 
