--- a/tr/upgradedialog.lang
+++ b/tr/upgradedialog.lang
@@ -26,7 +26,7 @@ Her zamankinden daha da şahane
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Şimdi yükseltin</a>: Hızlı ve bedava!
 
 
