--- a/vi/upgradedialog.lang
+++ b/vi/upgradedialog.lang
@@ -26,7 +26,7 @@ Và nhiều điều kỳ diệu khác
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>Hãy tải bản nâng cấp</a> - nhanh và miễn phí!
 
 
