--- a/zh-CN/upgradedialog.lang
+++ b/zh-CN/upgradedialog.lang
@@ -26,7 +26,7 @@
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
 <a %s>获取升级版本</a> - 快速且免费！
 
 
