--- a/en-GB/upgradedialog.lang
+++ b/en-GB/upgradedialog.lang
@@ -26,8 +26,8 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;<a %s>Get the upgrade</a> - it’s fast and free!
-<a %s>Get the upgrade</a> - it’s fast and free!
+;<a %s>Get the upgrade</a> — it’s fast and free!
+<a %s>Get the upgrade</a> — it’s fast and free!
 
 
 ;get the latest in security
