--- a/gl/upgradedialog.lang
+++ b/gl/upgradedialog.lang
@@ -27,7 +27,7 @@ Hai unha nova versión do Firefox que permitirá unha mellor protección contra 
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-Actualícese — Axiña e de balde!
+<a %s>Actualícese</a> — Axiña e de balde!
 
 
 ;get the latest in security
