--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -27,7 +27,7 @@ Na razpolago je nova različica Firefoxa, ki vas še bolje brani pred napadi na 
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-Prenesite posodobitev - hitro in brezplačno!
+<a %s>Prenesite posodobitev</a> - hitro in brezplačno!
 
 
 ;get the latest in security
