--- a/da/upgradedialog.lang
+++ b/da/upgradedialog.lang
@@ -23,35 +23,35 @@ Bedre end nogensinde
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Der findes en ny version af Firefox, der bedre kan beskytte dig mod online-angreb.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Hent opdateringen</a> - det er hurtigt og gratis!
+<a %s>Hent opdateringen</a> - det er hurtigt & gratis!
 
 
 ;get the latest in security
-get the latest in security
+få det nyeste indenfor sikkerhed
 
 
 ;experience faster performance
-få større ydeevne
+oplev hurtigere ydelse
 
 
 ;enjoy greater customization
-enjoy greater customization
+bedre tilpasningsmulighed
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Din version af Firefox vil snart være sårbar over for online-angreb.
 
 
 ;Stay safe online
-vær sikker online
+Hold dig sikker online
 
 
 ;Enjoy new features
-brug de nye funktioner
+Brug de nye funktioner
 
 
 ;URGENT!
@@ -59,30 +59,30 @@ HASTER!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Din version af Firefox er ikke længere beskyttet mod online angreb.
+Din version af Firefox er ikke længere beskyttet mod online-angreb.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Det er vores sidste påmindelse, inden vi automatisk opgraderer til den nyeste version
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox understøtter ikke længere din version af styresystemet. Du vil derfor være sårbar over for online-angreb.
 
 
 ;We recommend:
-We recommend:
+Vi anbefaler:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+At du opgraderer dit<a %s>styresystem</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+At du downloader en kompatibel browser
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+At du installere en gratis opgradering til dit <a %s>styresystem</a>
 
 
