--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -118,7 +118,7 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+¿Estás usando Firefox en varios equipos? Ahora puedes sincronizar tus complementos en todos ellos. <a href="%">Descubre cómo activar Sync.</a>
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
