--- a/es-ES/upgradedialog.lang
+++ b/es-ES/upgradedialog.lang
@@ -26,8 +26,8 @@ Más cosas alucinantes que nunca
 Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataques informáticos.
 
 
-;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Actualiza tu Firefox</a>. ¡Es rápido y gratuito!
+;Get the upgrade — it’s fast & free!
+Actualiza tu Firefox. ¡Es rápido y gratuito!
 
 
 ;get the latest in security
@@ -43,15 +43,15 @@ disfruta de una mayor personalización
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Tu versión de Firefox pronto será vulnerable a ataques informáticos.
 
 
 ;Stay safe online
-permanece seguro en la red
+Mantén tu seguridad en Internet
 
 
 ;Enjoy new features
-disfruta de nuevas características
+Disfruta de nuevas características
 
 
 ;URGENT!
@@ -59,30 +59,28 @@ disfruta de nuevas características
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Tu versión de Firefox ya no te protege frente a ataques en la red.
+Tu versión de Firefox ya no te protege frente a ataques informáticos.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Este es el último recordatorio antes de que tu versión se actualice automáticamente
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ya no es compatible con la versión de tu sistema operativo, por lo que será vulnerable a ataques informáticos.
 
 
 ;We recommend:
-We recommend:
+Recomendamos:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualizar el <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Descargar un navegador compatible
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
-
-
+Instalar una actualización gratuita del <a %s>sistema operativo</a>
