--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -118,6 +118,6 @@
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+बरेच संगणकांवर फायरफॉक्सचा वापर? आता सगळ्यांवर ॲडऑन्स्ला सिंक्रोनाइज करणे शक्य आहे. <a href="%">सिंक सुरू करण्याविषयी माहिती मिळवा.</a>
 
 
