--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -138,42 +138,42 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+感謝您更新您的收件偏好。
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+您已經退訂。
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+我們對您的退訂感到抱歉。願意告訴我們為什麼不訂了嗎？
 
 
 ;You send too many emails.
-You send too many emails.
+你們發了太多信。
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+你們的信件內容跟我沒什麼關係。
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+你們的信件版面設計很難閱讀。
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+我根本沒有訂過這些信件。
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+我將會改從 Facebook 與 Twitter 來追蹤 Mozilla 的消息。
 
 
 ;Submit
-Submit
+送出
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+感謝您告訴我們退訂的原因以便我們改善。
 
 
