--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -63,26 +63,26 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+這是在更新到最新版本前的最後通知
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox 將不再支援您的作業系統，將會暴露於線上攻擊的風險當中。
 
 
 ;We recommend:
-We recommend:
+我們建議您:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+升級您的 <a %s>作業系統</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+下載相容的瀏覽器
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+安裝您 <a %s>作業系統</a> 的免費升級套件
 
 
