--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -114,7 +114,7 @@ Firefox 也在您最愛的社群網站出沒，跟我們一起聊聊吧。
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+管理您 <span>訂閱的電子報</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+若您想要退訂所有來自 Mozilla 的電子郵件，請打勾
 
 
 ;Remove me from all Mozilla emails
@@ -174,6 +174,6 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for telling us why you’re leaving.
-感謝您告訴我們退訂的原因以便我們改善。
+感謝您告訴我們退訂的原因！
 
 
