--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -43,7 +43,7 @@
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+您的 Firefox 很快將會暴露於遭受線上攻擊的風險當中。
 
 
 ;Stay safe online
@@ -59,7 +59,7 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-您所使用的 Firefox 版本將不再受到網路攻擊的保護
+您所使用的 Firefox 版本將不再受到網路攻擊的保護。
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
@@ -67,7 +67,7 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox 將不再支援您的作業系統，將會暴露於線上攻擊的風險當中。
+Firefox 將不再支援您的作業系統，將會暴露於遭受線上攻擊的風險當中。
 
 
 ;We recommend:
