[ko] update messages for *.lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104255 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/newsletter.lang
+++ b/ko/newsletter.lang
@@ -62,7 +62,7 @@ Mozilla에 관한 소식을 매월 보내 드립니다. Firefox 웹 브라우저
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+뉴스 레터 구독이 확인되었습니다.
 
 
 ;Format
@@ -70,110 +70,109 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+기다려주세요! <span>더 많은 것이 있습니다.</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+가장 적당한 정보를 얻고 싶으시면 아래 Mozilla 뉴스레터를 신청하십시오. (각 메일은 영문으로 전달됨을 유의해 주십시오.
 
 
 ;Firefox & You
-Firefox & You
+Firefox와 여러분
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+영문 뉴스레터 목록:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Firefox 브라우저의 사용팁 및 기능을 소개해드립니다.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox 모바일
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Firefox 모바일의 새로운 기능 및 추천 부가 기능을 알려드립니다.
 
 
 ;Beta News
-Beta News
+베타 뉴스
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Firefox 데스크톱 및 모바일 버전에 대한 다양한 기능을 미리 알려드립니다.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+친구가 되어 주세요!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox는 여러분의 소셜네트워크 사이트에도 계정이 있습니다. 함께 연결하여 대화를 나누어 주십시오.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+<span>뉴스레터 구독</span> 설정하기
 
 
 ;Subscribe
-Subscribe
+구독하기
 
 
 ;Unsubscribe
-Unsubscribe
+구독 취소
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Mozilla 이메일을 받지 않으시려면 여기를 선택
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Mozilla 이메일 구독 취소
 
 
 ;Save Preferences
-Save Preferences
+설정 저장
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+이메일 주소 설정을 업데이트해 주셔서 감사합니다.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+구독 취소가 완료되었습니다.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+왜 구독을 취소하시는지 알려 주시면 매우 도움이 될 것입니다.
 
 
 ;You send too many emails.
-You send too many emails.
+너무 많은 메일을 자주 보냅니다.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+콘텐츠가 저에게 맞지 않습니다.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+메일 디자인이 읽기가 어렵습니다.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+메일링리스트 구독을 직접 신청하지 않았습니다.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+대신 페이스북과 트위터로 Mozilla의 뉴스를 받겠습니다.
 
 
 ;Submit
-Submit
+보내기
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
+왜 구독을 중단하는지 알려주셔서 감사합니다.
 
