--- a/ko/upgradedialog.lang
+++ b/ko/upgradedialog.lang
@@ -23,7 +23,7 @@ Firefox 3.6 보다 더 빠른 속도
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+새로운 버전의 Firefox는 온라인 보안 공격에 안전한 기능을 가지고 있습니다.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+최신 보안 업데이트 받기
 
 
 ;experience faster performance
@@ -39,12 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+맞춤형 기능 즐기기
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
-
+현재 Firefox 버전은 향후 보안 취약점에 노출될 수 있습니다.
 
 ;Stay safe online
 더 안전한 서비스
@@ -63,26 +62,26 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+이 메시지는 최신 버전으로 자동 업데이트 되기 전에 마지막 안내문입니다.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox는 더 이상 현재 운영 체제를 지원하지 않습니다. 향후 온라인 보안 취약성에 노출 될 수 있습니다.
 
 
 ;We recommend:
-We recommend:
+추천:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+<a %s>운영 체제</a> 업그레이드 중
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+호환 브라우저 다운로드 중
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+<a %s>운영 체제</a>에 맞는 무료 업그레이드 설치 중
 
 
