update Punjabi Translation for Mobile, upgrade, download LANG file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104289 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pa-IN/upgradedialog.lang
+++ b/pa-IN/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ਫਾਇਰਫਾਕਸ ਦਾ ਨਵਾਂ ਵਰਜਨ ਹੈ, ਜੋ ਕਿ ਤੁਹਾਨੂੰ ਆਨਲਾਈਨ ਹਮਲਿਆਂ ਤੋਂ ਵਧੀਆ ਸੁਰੱਖਿਆ ਦੇ ਸਕਦਾ ਹੈ।
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+ਸੁਰੱਖਿਆ ਵਿੱਚ ਸਭ ਤੋਂ ਨਵਾਂ ਲਵੋ
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+ਸਭ ਤੋਂ ਵੱਧ ਪਸੰਦ ਮੁਤਾਬਕ ਬਣਾਉਣ ਦਾ ਆਨੰਦ ਲਵੋ
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+ਫਾਇਰਫਾਕਸ ਦਾ ਤੁਹਾਡਾ ਵਰਜਨ ਛੇਤੀ ਹੀ ਆਨਲਾਈਨ ਹਮਲਿਆਂ ਲਈ ਕਮਜ਼ੋਰ (ਅਸੁਰੱਖਿਅਤ) ਹੋਵੇਗਾ।
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+ਇਹ ਤੁਹਾਡੇ ਲਈ ਆਖਰੀ ਵਾਰ ਸੂਚਨਾ ਹੈ, ਇਸ ਤੋਂ ਪਹਿਲਾਂ ਕਿ ਤੁਹਾਨੂੰ ਆਪਣੇ-ਆਪ ਹੀ ਨਵੇਂ ਵਰਜਨ ਲਈ ਅੱਪਡੇਟ ਕੀਤਾ ਜਾਵੇ
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+ਫਾਇਰਫਾਕਸ ਤੁਹਾਡੇ ਓਪਰੇਟਿੰਗ ਸਿਸਟਮ ਵਰਜਨ ਥਈ ਹੁਣ ਸਹਾਇਕ ਨਹੀਂ ਰਿਹਾ ਹੈ ਅਤੇ ਆਨਲਾਈਨ ਹਮਲਿਆਂ ਲਈ ਕਮਜ਼ੋਰ (ਅਸੁਰੱਖਿਅਤ) ਹੋਵੇਗਾ।
 
 
 ;We recommend:
-We recommend:
+ਅਸੀਂ ਸਿਫਾਰਸ਼ ਕਰਦੇ ਹਾਂ:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+ਆਪਣੇ  <a %s>ਓਪਰੇਟਿੰਗ ਸਿਸਟਮ</a> ਨੂੰ ਅੱਪਗਰੇਡ ਕਰੋ
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+ਅਨੁਕੂਲ ਬਰਾਊਜ਼ਰ ਡਾਊਨਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+ਤੁਹਾਡੇ <a %s>ਓਪਰੇਟਿੰਗ ਸਿਸਟਮ</a> ਲਈ ਮੁਫ਼ਤ ਅੱਪਗਰੇਡ ਇੰਸਟਾਲ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ
 
 
