--- a/pa-IN/mobile.lang
+++ b/pa-IN/mobile.lang
@@ -2,130 +2,130 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+ਐਡਰਾਇਡ ਲਈ ਫਾਇਰਫਾਕਸ ਲਵੋ
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+<span>ਐਡਰਾਇਡ</span> ਲਈ ਡਾਊਨਲੋਡ ਕਰੋ
 
 
 ;Free from the Android Market
-Free from the Android Market
+ਐਡਰਾਇਡ ਮਾਰਕੀਟ ਵਿੱਚੋਂ ਮੁਫ਼ਤ ਲਵੋ
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+ਜਾਂ ਆਪਣੇ ਫੋਨ ਉੱਤੇ <a %s>Firefox.com/m</a> ਖੋਲ੍ਹੋ।
 
 
 ;Supported Devices
-Supported Devices
+ਸਹਾਇਕ ਜੰਤਰ
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+ਆਈਟਿਊਨ ਤੋਂ ਲਵੋ - ਮੁਫ਼ਤ
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+<span>iPhone</span> ਲਈ ਫਾਇਰਫਾਕਸ ਹੋਮ
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+ਆਪਣੇ iPhone ਉੱਤੇ ਆਪਣਾ ਫਾਇਰਫਾਕਸ ਅਤੀਤ, ਬੁੱਕਮਾਰਕ ਅਤੇ ਖੋਲ੍ਹੀਆਂ ਹੋਈਆਂ ਟੈਬਾਂ ਪ੍ਰਾਪਤ ਕਰੋ
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+ਫਾਇਰਫਾਕਸ ਨੂੰ <span>ਆਪਣੇ ਮੋਬਾਇਲ</span> ਉੱਤੇ ਡਾਊਨਲੋਡ ਕਰੋ
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+ਨਵੇਂ ਫੀਚਰਾਂ ਨੂੰ ਟੈਸਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+iPhone ਲਈ ਫਾਇਰਫਾਕਸ ਹੋਮ ਲਵੋ
 
 
 ;Download Beta for Android
-Download Beta for Android
+ਐਡਰਾਇਡ ਲਈ ਬੀਟਾ ਡਾਊਨਲੋਡ ਕਰੋ
 
 
 ;Download
-Download
+ਡਾਊਨਲੋਡ
 
 
 ;for
-for
+ਇਸ ਲਈ
 
 
 ;Free from iTunes
-Free from iTunes
+iTunes ਤੋਂ ਮੁਫ਼ਤ
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+ਤੁਸੀਂ ਬਿਲਕੁਲ ਨਵੇਂ ਨਕੋਰ ਫੀਚਰ ਵਰਤ ਸਕਦੇ ਹੋ ਅਤੇ ਅੰਤਮ ਰੀਲਿਜ਼ ਵਿੱਚ ਉਪਲੱਬਧ ਕਰਵਾਉਣ ਲਈ ਸੁਧਾਰਨ ਅਤੇ ਵਧੀਆ ਬਣਾਉਣ ਲਈ ਮੱਦਦ ਕਰਨ ਵਾਸਤੇ ਸੁਝਾਅ ਦੇ ਸਕਦੇ ਹੋ।
 
 
 ;Developer Tools
-Developer Tools
+ਡਿਵੈਲਪਰ ਟੂਲ
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+ਤੁਸੀਂ ਫਾਇਰਫਾਕਸ ਦੇ ਮੋਬਾਇਲ ਵਰਜਨ ਨੂੰ ਆਪਣੇ ਡੈਸਕਟਾਪ ਕੰਪਿਊਟਰ ਉੱਤੇ ਟੈਸਟ ਕਰਨ,  ਸੁਜਾਅ ਦੇਣ ਅਤੇ ਐਡ-ਆਨ ਬਣਾਉਣ ਲਈ ਇੰਸਟਾਲ ਕਰ ਸਕਦੇ ਹੋ।
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+ਮੋਬਾਇਲ ਲਈ ਫਾਇਰਫਾਕਸ ਨਾਲ ਕੁਨੈਕਟ ਕਰੋ:
 
 
 ;Monthly newsletter
-Monthly newsletter
+ਮਹੀਨੇਵਾਰ ਖ਼ਬਰਸਾਰ
 
 
 ;Follow us
-Follow us
+ਸਾਨੂੰ ਫਾਅਲੋ ਕਰੋ
 
 
 ;Become a fan
-Become a fan
+ਸ਼ੌਕੀਨ ਬਣੋ
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+ਫਾਇਰਫਾਕਸ ਖੋਜਾਂ ਭਰਿਆ ਪਿਆ ਹੈ, ਜੋ ਕਿ ਤੁਸੀਂ ਘੱਟ ਲਿਖਣ, ਵੱਧ ਬਰਾਊਜ਼ ਕਰਨ ਅਤੇ ਵੈੱਬ ਤੁਰੰਤ ਤੇ ਸੌਖੀ ਤਰ੍ਹਾਂ ਵਰਤਣ ਦਿੰਦੀਆਂ ਹਨ।
 
 
 ;Freedom from typing
-Freedom from typing
+ਲਿਖਣ ਤੋਂ ਆਜ਼ਾਦੀ
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+ਬੇਨਜ਼ੀਰ ਸਕੀਰਨ ਤੁਹਾਡੀ ਪਸੰਦ ਦੀਆਂ ਸਾਈਟਾਂ ਬਾਰੇ ਸਿੱਖਦੀ ਹੈ ਤਾਂ ਕਿ ਤੁਹਾਨੂੰ ਬਹੁਤ ਘੱਟ ਜਾਂ ਬਿਲਕੁਲ ਹੀ ਨਾ ਲਿਖਣਾ ਪਵੇ।
 
 
 ;Best of both worlds
-Best of both worlds
+ਦੋਵੇਂ ਸੰਸਾਰ ਲਈ ਸਭ ਤੋਂ ਵਧੀਆ
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+ਐਡਰਾਇਡ ਲਈ ਫਾਇਰਫਾਕਸ ਨੂੰ ਹੁਣ ਨਵੇਂ ਸਿਰੇ ਤੋਂ ਇੰਝ ਡਿਜ਼ਾਇਨ ਕੀਤਾ ਅਤੇ ਅਨੁਕੂਲ ਬਣਾਇਆ ਗਿਆ ਹੈ ਕਿ ਫੋਨ ਅਤੇ ਟੇਬਲੇਟ ਉੱਤੇ ਬਰਾਊਜ਼ ਕਰ ਸਕੋ।
 
 
 ;Browse quick and easy
-Browse quick and easy
+ਤੁਰੰਤ ਅਤੇ ਸੌਖੀ ਤਰ੍ਹਾਂ ਬਰਾਊਜ਼ ਕਰੋ
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+ਫੀਚਰ ਜਿਵੇਂ ਕਿ ਸਿੰਕ, ਟੈਬ ਰਾਹੀਂ ਬਰਾਊਜ਼ ਕਰਨਾ, ਇੱਕ ਛੋਹ ਨਾਲ ਬੁੱਕਮਾਰਕ ਕਰਨਾ ਆਦਿ, ਜੋ ਵੀ ਤੁਸੀਂ ਚਾਹੁੰਦੇ ਹੋ, ਉਹ ਸਭ ਤੁਹਾਡੇ ਹੱਥਾਂ ਦੇ ਕੋਲ।
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>ਮੱਦਦ ਚਾਹੀਦੀ ਹੈ?</a> ਐਡਰਾਇਡ ਸਹਾਇਕ ਸਾਈਟ ਲਈ ਸਾਡੇ ਫਾਇਰਫਾਕਸ ਨੂੰ ਵੇਖੋ।
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+ਬਿਲਡ ਡਾਊਨਲੋਡ ਅਤੇ ਟੈਸਟ ਕਰੋ, ਜੋ ਵੀ ਤੁਹਾਡੇ ਲਈ ਠੀਕ ਹੋਵੇ।
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+ਮੋਬਾਇਲ ਲਈ ਸਾਡੇ ਸਭ ਚੈਨਲ ਵੇਖੋ »
 
 
